@@ -1679,6 +1679,14 @@
             "mpruett"
          ]
       },
+      "Micha\u0142 Paku\u0142a vel Rutka" : {
+         "emails" : [
+            "m.pakula@samsung.com"
+         ],
+         "nicks" : [
+            "mpakula"
+         ]
+      },
       "Michelangelo De Simone" : {
          "emails" : [
             "michelangelo@webkit.org"
